--- a/Source/CorreccionTesis/capitulo2.tex
+++ b/Source/CorreccionTesis/capitulo2.tex
@@ -49,7 +49,7 @@ Existen diferentes técnicas para disminuir la presencia de este ruido, pero com
 La utilización de modelos estadísticos ha sido una herramienta fundamental para analizar e interpretar datos con ruido speckle. 
 Se han presentado varias distribuciones para modelar este tipo de imágenes. Las distribuciones Lognormal y Weibull fueron introducidas por \citet{oliverquegan98} para caracterizar datos de alta resolución, mientras que \citet{Oliver1993} estudió las distribuciones \textit{K} y Weibull. 
 \citet{Tison2004} presentaron la distribución de Fisher para modelar varios tipos de áreas. 
-\citet{Li2011} propusieron una distribución Gamma generalizada para modelar imágenes SAR; esa distribución tiene las leyes Weibull, \textit{K} y Fisher, entre otras, como casos particulares. 
+\citet{Li2011} propusieron una distribución gamma generalizada para modelar imágenes SAR; esa distribución tiene las leyes Weibull, \textit{K} y Fisher, entre otras, como casos particulares. 
 Cabe señalar que la distribución $\mathcal{G}^0$ está relacionada con la distribución de Fisher, como muestran \citet{MejailJacoboFreryBustos:IJRS}.
 
 \citet{oliverquegan98} proponen modelar datos provenientes de un sistema de iluminación por radiación coherente, como son los datos SAR, con un modelo multiplicativo que considera que el valor observado en cada celda de la imagen es una variable aleatoria $Z$ que resulta del producto de dos variables aleatorias independientes: una correspondiente a la retrodispersión $X$ (que es lo que observaríamos sin la presencia del ruido speckle) y la otra correspondiente al ruido speckle $Y$ (que es inherente a todo sistema de captura de imágenes con iluminación coherente). 
@@ -58,7 +58,7 @@ En los últimos años, se ha utilizado exitosamente el modelo $\mathcal{G}^0$: $
 Debido a esta interpretabilidad, es crucial obtener estimaciones de calidad de dichos parámetros, en particular para $\alpha$.
 
 Varios autores han estudiado el problema de la estimación de parámetros para la familia $\mathcal G^0$. \citet{Freitas2005} usaron el primer y segundo momento para estimar los parámetros de textura y escala en el caso de datos de intensidad.
-\citet{VasconcellosFrerySilva:CompStat} cuantifican el error en la estimación del parámetro de textura para la distribución $\mathcal G_A^0$ y proponen una técnica analítica para mejorar la estimación a través de una corrección de segundo orden en el sesgo de la estimación del parámetro de textura. \citet{Li2011} obtuvieron una expresión para los estimadores de la distribución Gamma generalizada basada en cumulantes de segundo tipo y una aproximación de segundo orden de la función Polygamma. \citet{CribariFrerySilva:CSDA} implementaron técnicas de remuestreo para mejorar la estimación de parámetros para el modelo $\mathcal G_I^0$.
+\citet{VasconcellosFrerySilva:CompStat} cuantifican el error en la estimación del parámetro de textura para la distribución $\mathcal G_A^0$ y proponen una técnica analítica para mejorar la estimación a través de una corrección de segundo orden en el sesgo de la estimación del parámetro de textura. \citet{Li2011} obtuvieron una expresión para los estimadores de la distribución gamma generalizada basada en cumulantes de segundo tipo y una aproximación de segundo orden de la función Polygamma. \citet{CribariFrerySilva:CSDA} implementaron técnicas de remuestreo para mejorar la estimación de parámetros para el modelo $\mathcal G_I^0$.
 
 \citet{nicolas2002} propusieron el método basado en Logmomentos y Logcumulantes para estimar los parámetros de una distribución. Estos métodos dependen de la relación entre los momentos de la distribución y su transformada de Mellin. La misma idea fue aplicada por \citet{khan2014} para estimar los parámetros del modelo $\mathcal{G}^0$ multivariado en el caso de datos SAR polarimétricos y también fue utilizada por \citet{Tison2004} para la estimación del modelo $\mathcal{G}^0_A$.
 
@@ -91,7 +91,7 @@ El autor mostró que estos estimadores son consistentes y asintóticamente efici
 Dentro de los estimadores no paramétricos de la función de densidad subyacente se encuentran los estimadores de kernel clásico, con kernel simétrico que son populares en la estimación de la función de densidad.  \citet{Silverman1986} es una referencia clásica para este tipo de estimadores.
 
 Sin embargo, si la función de densidad a estimar tiene soporte acotado o semiacotado, estos estimadores pueden dar estimaciones sesgadas en los bordes porque asignan probabilidad positiva fuera del soporte de la función. 
-Una alternativa para mejorar esto es utilizar núcleos asimétricos. \citet{chen1999, chensx2000} presentan los núcleos Beta y Gamma, \citet {Scaillet2004} introduce los núcleos Inverso Gaussianos (IG) y Recíproco Inverso Gaussiano (RIG), \citet {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG, \citet{Jin2003}  proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados \citep{Scaillet2004}. 
+Una alternativa para mejorar esto es utilizar núcleos asimétricos. \citet{chen1999, chensx2000} presentan los núcleos Beta y Gamma, \citet {Scaillet2004} introduce los núcleos Inverso Gaussiano (IG) y Recíproco Inverso Gaussiano (RIG), \citet {bouezmarni2005} demuestran propiedades teóricas de los núcleos Gamma, IG y RIG, \citet{Jin2003}  proponen los núcleos Birnbaum-Saunders (BS) y Lognormal (LN). Es interesante señalar que  estos estimadores varían su forma de acuerdo con la observación, una característica que permite obtener diferentes grados de suavizamiento sin incurrir en los problemas antes mencionados \citep{Scaillet2004}. 
 
 En esta tesis se propone un nuevo  estimador de los parámetros de la distribución $\mathcal{G}_I^0$ definido como el punto del espacio paramétrico que minimiza la distancia estocástica que existe entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente utilizando núcleos asimétricos. Se muestra que la distancia triangular es una buena elección para tratar este problema y se prueba la convergencia fuerte de este estimador. Asimismo, a través de simulaciones Monte Carlo, se analizan:
 \begin{itemize}
