--- a/Source/CorreccionTesis/capitulo5.tex
+++ b/Source/CorreccionTesis/capitulo5.tex
@@ -380,7 +380,7 @@ Dentro de los núcleos utilizados se encuentran los propuestos en \citet{chensx2
 	para $t,x,b>0$.
 \end{subequations}
 
-Los núcleos $\Gamma^1$ y $\Gamma^2$ propuestos por \citet{chensx2000} consideran como núcleo $K$ a una distribución Gamma con dos juegos distintos de parámetros. El autor consideró que $X \sim \Gamma(k,\theta)$ si su función de densidad es $f(x)=\frac{1}{\Gamma(k) \theta^k} x^{k-1} e^{x/\theta}$ para $x \in (0,+\infty)$. 
+Los núcleos $\Gamma^1$ y $\Gamma^2$ propuestos por \citet{chensx2000} consideran como núcleo $K$ a una distribución gamma con dos juegos distintos de parámetros. El autor consideró que $X \sim \Gamma(k,\theta)$ si su función de densidad es $f(x)=\frac{1}{\Gamma(k) \theta^k} x^{k-1} e^{x/\theta}$ para $x \in (0,+\infty)$. 
 %Chen \citet{chensx2000} muestra que el ECM para XXX ver 3.5 de chen
 
 Se consideraron estos núcleos porque, para modelar a la retrodispersión, el modelo $\mathcal{G}_I^0$ propone a la distribución $\Gamma^{-1}$ y el modelo $\mathcal{G}^H$ considera la distribución $IG$. Además, de acuerdo a lo visto en el capítulo~\ref{Modelo Multiplicativo} la distribución Lognormal fue introducida en \citet{oliverquegan98} y fue propuesta como modelo empírico para describir datos SAR.
@@ -840,6 +840,7 @@ Cabe realizar algunas observaciones:
 		donde 
 		$$\phi(x)=\dfrac{x^{\beta}-\beta(x-1)-1}{\beta-1} \text{ con } 0 < \beta < 1, \text{ y }$$  
 		$$h(y)=\dfrac{1}{\beta-1}\log((\beta-1)y+1) \text{ con } 0\leq y<\dfrac{1}{1-\beta}.$$
+		El rango de valores de $\beta$ corresponden a los utilizados en \citet{Venkatesan2019,Nascimento2009}.
 	\end{itemize}
 \end{example}
 
