--- a/Source/CorreccionTesis/capitulo8.tex
+++ b/Source/CorreccionTesis/capitulo8.tex
@@ -12,7 +12,7 @@ Esta tesis propone un nuevo estimador para el parámetro de textura de la distri
 
 En un primer momento se evaluaron diferentes distancias estocásticas eligiendo la distancia triangular porque fue la que mejor desempeño mostró al momento de estimar el parámetro de textura del modelo $\mathcal{G}_I^0$.
 
-Luego se consideró el núcleo inverso Gaussiano (IG) para estimar $\widehat{f}$ con un ancho de banda encontrado empíricamente, y se comparó su desempeño con los estimadores que provienen del método MV, LC y Momento Fraccionario de orden $1/2$ en términos de sesgo, error cuadrático medio (ECM), tiempo de procesamiento y bajo contaminación. En esta oportunidad se consideraron tres casos de contaminación y se observó que tanto Momentos Fraccionarios como LC presentaron problemas de convergencia. Además, Momentos Fraccionarios presentó mayor sesgo y ECM en la mayoría de los casos analizados.
+Luego se consideró el núcleo Inverso Gaussiano (IG) para estimar $\widehat{f}$ con un ancho de banda encontrado empíricamente, y se comparó su desempeño con los estimadores que provienen del método MV, LC y Momento Fraccionario de orden $1/2$ en términos de sesgo, error cuadrático medio (ECM), tiempo de procesamiento y bajo contaminación. En esta oportunidad se consideraron tres casos de contaminación y se observó que tanto Momentos Fraccionarios como LC presentaron problemas de convergencia. Además, Momentos Fraccionarios presentó mayor sesgo y ECM en la mayoría de los casos analizados.
 
 Definimos tres modelos de contaminación inspirados en situaciones reales para evaluar el impacto de los valores atípicos en el desempeño de los estimadores. Analizando estos escenarios se obsevó que
 
