Hasta el 6 inclusive

--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -5636,3 +5636,15 @@
 	doi       = {10.1007/s40815-019-00654-6},
 	publisher = {Springer Science and Business Media {LLC}},
 }
+
+
+@article{SamplingfromtheGI0Distribution2018,
+	Author = {D. Chan and A. Rey and J. Gambini and A. C. Frery},
+	Doi = {https://doi.org/10.1515/mcma-2018-2023},
+	Journal = {Monte Carlo Methods and Applications},
+	Number = {4},
+	Pages = {271--287},
+	Title = {Sampling from the {GI0} Distribution},
+	Volume = {24},
+	Year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1515/mcma-2018-2023}}
