--- a/Source/CorreccionTesis/capitulo3.tex
+++ b/Source/CorreccionTesis/capitulo3.tex
@@ -272,7 +272,8 @@ El radar de apertura sintética es un sensor activo, de vista lateral, que emite
 Está montado sobre una plataforma móvil (aeronave o satélite) que transmite y recibe las señales con la misma antena, la cual tiene su eje longitudinal paralelo a la trayectoria de vuelo. 
 Debido a la gran velocidad del desplazamiento de la plataforma y aprovechando el efecto Doppler que tiene lugar como consecuencia de dicho desplazamiento, la antena del dispositivo SAR  se convierte en una antena virtual de mayor tamaño. 
 
-No todos los radares son aerotransportados. \citet{Monserrat2014} presentan una revisión del SAR basado en tierra (GBSAR) que es un radar de monitoreo de deformación de la superficie terrestre. Es un radar altamente compacto que se mueve a lo largo de una vía férrea. Utiliza tecnología SAR para obtener información sobre la deformación y topografía del suelo.
+No todos los radares son aerotransportados o satelitales. 
+\citet{Monserrat2014} presentan una revisión del SAR basado en tierra (GBSAR -- \textit{Ground-Based SAR}) que es un radar de monitoreo de deformación de la superficie terrestre. Es un radar altamente compacto que se mueve a lo largo de una vía férrea. Utiliza tecnología SAR para obtener información sobre la deformación y topografía del suelo.
 
 El radar se desplaza a una velocidad $\vec{v}$ y a una altura $h$ portando una antena que emite radiación electromagnética e ilumina la superficie del terreno. En la figura~\ref{GeometriaSAR} se muestra un esquema del movimiento del radar, la región sombreada es la zona iluminada por el radar. Esta zona permanece en el haz de la antena durante unos instantes y es observado por el radar desde numerosos puntos a lo largo de la trayectoria de la plataforma.
 %, lo que es equivalente a prolongar la longitud real de la antena.
